cleaning up code and starting to process data from 2025-09-03

--- a/src/Data_Analysis/GPS_angles.ipynb
+++ b/src/Data_Analysis/GPS_angles.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "code",
    "source": [
     "# read data\n",
-    "df_gps = pd.read_excel(\"Radiosonde/GpsResults.xlsx\")\n",
+    "df_gps = pd.read_excel(\"Data_Radiosonde/GpsResults.xlsx\")\n",
     "df_altitude = pd.read_csv(\"Data_WXT/20250827_altitude_kite_from_wxt.csv\")\n",
     "\n",
     "file_path = \"Data_Theodolite/TheoRot_20250827_150544.txt\"\n",
