--- a/src/Data_Analysis/Radiosonde_data.ipynb
+++ b/src/Data_Analysis/Radiosonde_data.ipynb
@@ -33,8 +33,8 @@
    "cell_type": "code",
    "source": [
     "# read the data\n",
-    "df_gps = pd.read_excel(\"Radiosonde/GpsResults.xlsx\")\n",
-    "df_ptu = pd.read_excel(\"Radiosonde/PtuResults.xlsx\")"
+    "df_gps = pd.read_excel(\"Data_Radiosonde/GpsResults.xlsx\")\n",
+    "df_ptu = pd.read_excel(\"Data_Radiosonde/PtuResults.xlsx\")"
    ],
    "id": "5d0d47d383479683",
    "outputs": [],
@@ -289,7 +289,7 @@
     "sc = plt.scatter(df_gps['Longitude'][1:], df_gps['Latitude'][1:], c=time_num, cmap=\"viridis\", s=20)\n",
     "plt.xlabel(\"Longitude [°]\")\n",
     "plt.ylabel(\"Latitude [°]\")\n",
-    "plt.title(\"Ground Track of the Radiosonde\")\n",
+    "plt.title(\"Ground Track of the Data_Radiosonde\")\n",
     "plt.axis(\"equal\")\n",
     "cbar = plt.colorbar(sc, label=\"Time in UTC on 2025-08-27\")\n",
     "cbar.ax.yaxis.set_major_formatter(mdates.DateFormatter('%H:%M'))\n",
