added calculations from 2025-09-03

--- a/src/Data_Analysis/Correlation_angle_winspeed.ipynb
+++ b/src/Data_Analysis/Correlation_angle_winspeed.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:25:58.924559Z",
-     "start_time": "2025-09-04T09:25:58.840852Z"
+     "end_time": "2025-09-04T09:30:50.431334Z",
+     "start_time": "2025-09-04T09:30:50.329460Z"
     }
    },
    "cell_type": "code",
@@ -12,12 +12,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import xarray as xr\n",
-    "from datetime import timedelta, datetime\n",
+    "from datetime import datetime\n",
     "from function_interpolate_1theodolite import process_lidar_1theodolite\n",
     "from function_interpolate_2theodolites import process_lidar_2theodolite\n",
     "import seaborn as sns\n",
-    "import os\n",
     "from function_calculation_altitude_from_wxt import process_altitude"
    ],
    "id": "b6dcb758f31ff1d6",
@@ -33,8 +31,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:25:58.931250Z",
-     "start_time": "2025-09-04T09:25:58.927631Z"
+     "end_time": "2025-09-04T09:30:50.438384Z",
+     "start_time": "2025-09-04T09:30:50.434892Z"
     }
    },
    "cell_type": "code",
@@ -71,8 +69,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:25:59.003974Z",
-     "start_time": "2025-09-04T09:25:59.001615Z"
+     "end_time": "2025-09-04T09:30:50.510163Z",
+     "start_time": "2025-09-04T09:30:50.507773Z"
     }
    },
    "cell_type": "code",
@@ -109,8 +107,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:25:59.010008Z",
-     "start_time": "2025-09-04T09:25:59.007831Z"
+     "end_time": "2025-09-04T09:30:50.516194Z",
+     "start_time": "2025-09-04T09:30:50.514137Z"
     }
    },
    "cell_type": "code",
@@ -153,8 +151,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:25:59.015539Z",
-     "start_time": "2025-09-04T09:25:59.013915Z"
+     "end_time": "2025-09-04T09:30:50.521684Z",
+     "start_time": "2025-09-04T09:30:50.520112Z"
     }
    },
    "cell_type": "code",
@@ -172,8 +170,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:25:59.021494Z",
-     "start_time": "2025-09-04T09:25:59.019479Z"
+     "end_time": "2025-09-04T09:30:50.527691Z",
+     "start_time": "2025-09-04T09:30:50.525656Z"
     }
    },
    "cell_type": "code",
@@ -207,8 +205,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:25:59.032381Z",
-     "start_time": "2025-09-04T09:25:59.030194Z"
+     "end_time": "2025-09-04T09:30:50.536948Z",
+     "start_time": "2025-09-04T09:30:50.534551Z"
     }
    },
    "cell_type": "code",
@@ -252,8 +250,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:25:59.044070Z",
-     "start_time": "2025-09-04T09:25:59.041957Z"
+     "end_time": "2025-09-04T09:30:50.551405Z",
+     "start_time": "2025-09-04T09:30:50.549205Z"
     }
    },
    "cell_type": "code",
@@ -287,62 +285,72 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:25:59.861097Z",
-     "start_time": "2025-09-04T09:25:59.054292Z"
+     "end_time": "2025-09-04T09:53:16.231592Z",
+     "start_time": "2025-09-04T09:53:16.222490Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# 2025-09-03, 1st period\n",
+    "'''\n",
     "process_altitude(\n",
     "    date_str=\"2025-09-03\",\n",
     "    ptu_file=\"Data_Radiosonde/20250903/PtuResults_1stperiod.xlsx\",\n",
     "    wxt_file=\"Data_WXT/20250903.txt\",\n",
     "    lidar_file=\"Data_Lidar/20250903/combined_20250903.nc\",\n",
     "    output_csv=\"Data_Altitude/20250903_1stperiod_altitude_kite_from_wxt.csv\"\n",
-    ")"
+    ")\n",
+    "'''"
    ],
    "id": "c081a58771cb7e9e",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Altitude data saved to Data_Altitude/20250903_1stperiod_altitude_kite_from_wxt.csv\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nprocess_altitude(\\n    date_str=\"2025-09-03\",\\n    ptu_file=\"Data_Radiosonde/20250903/PtuResults_1stperiod.xlsx\",\\n    wxt_file=\"Data_WXT/20250903.txt\",\\n    lidar_file=\"Data_Lidar/20250903/combined_20250903.nc\",\\n    output_csv=\"Data_Altitude/20250903_1stperiod_altitude_kite_from_wxt.csv\"\\n)\\n'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:26:00.353314Z",
-     "start_time": "2025-09-04T09:25:59.864701Z"
+     "end_time": "2025-09-04T09:53:16.564691Z",
+     "start_time": "2025-09-04T09:53:16.562135Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# 2025-09-03, 2nd period\n",
+    "'''\n",
     "process_altitude(\n",
     "    date_str=\"2025-09-03\",\n",
     "    ptu_file=\"Data_Radiosonde/20250903/PtuResults_2ndperiod.xlsx\",\n",
     "    wxt_file=\"Data_WXT/20250903.txt\",\n",
     "    lidar_file=\"Data_Lidar/20250903/combined_20250903.nc\",\n",
     "    output_csv=\"Data_Altitude/20250903_2ndperiod_altitude_kite_from_wxt.csv\"\n",
-    ")"
+    ")\n",
+    "'''"
    ],
    "id": "7b11931c385d881d",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Altitude data saved to Data_Altitude/20250903_2ndperiod_altitude_kite_from_wxt.csv\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nprocess_altitude(\\n    date_str=\"2025-09-03\",\\n    ptu_file=\"Data_Radiosonde/20250903/PtuResults_2ndperiod.xlsx\",\\n    wxt_file=\"Data_WXT/20250903.txt\",\\n    lidar_file=\"Data_Lidar/20250903/combined_20250903.nc\",\\n    output_csv=\"Data_Altitude/20250903_2ndperiod_altitude_kite_from_wxt.csv\"\\n)\\n'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 21
   },
   {
    "metadata": {},
@@ -353,8 +361,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:26:00.374812Z",
-     "start_time": "2025-09-04T09:26:00.361256Z"
+     "end_time": "2025-09-04T09:30:51.963071Z",
+     "start_time": "2025-09-04T09:30:51.948617Z"
     }
    },
    "cell_type": "code",
@@ -383,8 +391,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:26:00.440357Z",
-     "start_time": "2025-09-04T09:26:00.436241Z"
+     "end_time": "2025-09-04T09:30:52.026897Z",
+     "start_time": "2025-09-04T09:30:52.022934Z"
     }
    },
    "cell_type": "code",
@@ -407,8 +415,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:26:00.469218Z",
-     "start_time": "2025-09-04T09:26:00.449112Z"
+     "end_time": "2025-09-04T09:30:52.057711Z",
+     "start_time": "2025-09-04T09:30:52.036567Z"
     }
    },
    "cell_type": "code",
@@ -440,8 +448,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:26:00.513220Z",
-     "start_time": "2025-09-04T09:26:00.480081Z"
+     "end_time": "2025-09-04T09:30:52.101936Z",
+     "start_time": "2025-09-04T09:30:52.068150Z"
     }
    },
    "cell_type": "code",
@@ -485,8 +493,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:26:00.552799Z",
-     "start_time": "2025-09-04T09:26:00.526706Z"
+     "end_time": "2025-09-04T09:30:52.144308Z",
+     "start_time": "2025-09-04T09:30:52.116900Z"
     }
    },
    "cell_type": "code",
@@ -525,8 +533,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:26:00.573444Z",
-     "start_time": "2025-09-04T09:26:00.571051Z"
+     "end_time": "2025-09-04T09:30:52.164721Z",
+     "start_time": "2025-09-04T09:30:52.162265Z"
     }
    },
    "cell_type": "code",
@@ -571,8 +579,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:26:00.597803Z",
-     "start_time": "2025-09-04T09:26:00.590714Z"
+     "end_time": "2025-09-04T09:30:52.189466Z",
+     "start_time": "2025-09-04T09:30:52.182338Z"
     }
    },
    "cell_type": "code",
@@ -627,8 +635,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:26:00.620372Z",
-     "start_time": "2025-09-04T09:26:00.617659Z"
+     "end_time": "2025-09-04T09:30:52.211935Z",
+     "start_time": "2025-09-04T09:30:52.209121Z"
     }
    },
    "cell_type": "code",
@@ -646,8 +654,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:29:13.083652Z",
-     "start_time": "2025-09-04T09:29:12.709721Z"
+     "end_time": "2025-09-04T09:30:52.541282Z",
+     "start_time": "2025-09-04T09:30:52.232921Z"
     }
    },
    "cell_type": "code",
@@ -677,7 +685,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/k6/y7fg0_p51yj9myt7l79bb1mc0000gn/T/ipykernel_6663/3422592105.py:11: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/k6/y7fg0_p51yj9myt7l79bb1mc0000gn/T/ipykernel_6805/3422592105.py:11: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  counts = df_all.groupby('elev_bin').size()\n"
      ]
     },
@@ -692,13 +700,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 21
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-04T09:26:00.824148Z",
-     "start_time": "2025-09-04T09:26:00.822893Z"
+     "end_time": "2025-09-04T09:30:52.582944Z",
+     "start_time": "2025-09-04T09:30:52.581707Z"
     }
    },
    "cell_type": "code",
