--- a/src/Data_Analysis/GPS_angles.ipynb
+++ b/src/Data_Analysis/GPS_angles.ipynb
@@ -188,6 +188,31 @@
   {
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2025-09-04T12:11:15.016109Z",
+     "start_time": "2025-09-04T12:11:14.828752Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_lat_filtered['Latitude']",
+   "id": "63f3493d8e7d6700",
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_lat_filtered' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mdf_lat_filtered\u001B[49m[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mLatitude\u001B[39m\u001B[38;5;124m'\u001B[39m]\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'df_lat_filtered' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
      "end_time": "2025-08-28T14:12:07.672907Z",
      "start_time": "2025-08-28T14:12:07.671391Z"
     }
